Finish aplication web fo Lab3

--- a/Lab3/web/frontend/index.html
+++ b/Lab3/web/frontend/index.html
@@ -9,6 +9,7 @@
             <form id="form">
                 <label>User id: <input type="text" id="User" name="Name" /></label>
                 <button type="submit">Recomendar</button>
+                <p id="rmse"></p>
             </form>
         </div>
         <div class="response">
@@ -17,7 +18,7 @@
                 <ul id="movies"></ul>
             </div>
             <div class="result">
-                <p><b>Top 3 users neighbors</b></p>
+                <p><b>Top 3 users neighbors id</b></p>
                 <ul id="users"></ul>
             </div>
         </div>
